Fix collapsing modal content.

--- a/app/styles/components/_modals.scss
+++ b/app/styles/components/_modals.scss
@@ -41,6 +41,9 @@ MODALS
     @include proxima('regular');
     font-size: 30px;
   }
+  .modal-content {
+    display: block;
+  }
 }
 #modal--primary .modal-body{
   max-width: none;
